subtest-impl/tests/snapshots/expand_impl__snapshots@no_subtests.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/no_subtests.rs
---
#[test]
fn test() {
    assert_eq!(1, 1);
}
