subtest-impl/tests/snapshots/expand_impl__snapshots@non_overriding_attrs.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/non_overriding_attrs.rs
---
#[test]
fn parent() {}
mod parent_subtests {
    use super::*;
    #[test]
    /// A doc comment
    fn doc_comment() {}
    #[test]
    ///An explicit doc attribute
    fn doc_attr() {}
    #[test]
    #[allow(clippy::eq_op)]
    fn allow_attr() {}
    #[test]
    #[expect(clippy::eq_op)]
    fn expect_attr() {}
    #[test]
    #[warn(clippy::eq_op)]
    fn warn_attr() {}
    #[test]
    #[deny(clippy::eq_op)]
    fn deny_attr() {}
    #[test]
    #[forbid(unsafe_code)]
    fn forbid_attr() {}
    #[test]
    #[cfg(test)]
    fn cfg_attr_() {}
    #[test]
    #[cfg_attr(test, inline)]
    fn cfg_attr_attr() {}
    #[test]
    #[rustfmt::skip]
    fn tool_attr() {}
    #[test]
    #[inline]
    fn inline_attr() {}
    #[test]
    #[must_use]
    fn must_use_attr() {}
    #[test]
    #[track_caller]
    fn track_caller_attr() {}
    #[test]
    #[cold]
    fn cold_attr() {}
    #[test]
    /// A doc comment
    #[allow(clippy::eq_op)]
    #[cfg(test)]
    #[rustfmt::skip]
    #[inline]
    #[track_caller]
    fn all_at_once() {}
}
