subtest-impl/tests/snapshots/expand_impl__snapshots@parameter_inheritance.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/parameter_inheritance.rs
---
#[test]
fn parent(arg: i32, arg2: bool) {}
mod parent_subtests {
    use super::*;
    #[test]
    fn child(arg: i32, arg2: bool) {}
    mod child_subtests {
        use super::*;
        #[test]
        fn grandchild(arg: i32, arg2: bool) {}
    }
}
