subtest-impl/tests/snapshots/expand_impl__snapshots@parameter_override.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/parameter_override.rs
---
fn parent(arg: i32, arg2: bool) {}
mod parent_subtests {
    use super::*;
    fn child(arg: i32, arg2: bool, arg3: u64) {}
    mod child_subtests {
        use super::*;
        fn grandchild(arg: i32, arg2: bool, arg3: u64) {}
    }
}
