subtest-impl/tests/snapshots/expand_impl__snapshots@readme_async_example.rs.snap
---
source: subtest-impl/tests/expand_impl.rs
expression: macro_output
input_file: subtest-impl/tests/expand_impl/readme_async_example.rs
---
#[tokio::test]
async fn value_can_be_sent_async() {
    let (sender, receiver) = tokio::sync::mpsc::channel(5);
    sender.send("Hello!").await.unwrap();
    drop(receiver);
}
mod value_can_be_sent_async_subtests {
    use super::*;
    #[tokio::test]
    async fn value_can_be_received() {
        let (sender, receiver) = tokio::sync::mpsc::channel(5);
        sender.send("Hello!").await.unwrap();
        let mut receiver = receiver;
        let value = receiver.recv().await.unwrap();
        assert_eq!(value, "Hello!");
    }
}
